--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
     <script>
         let myID = "";
-        const API = "https://stale-peaches-rhyme.loca.lt";
+        const API = "https://old-impala-74.loca.lt/";
         
         function writeConsole(msg, status = "INFO") {
             const time = new Date().toLocaleTimeString();
