--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
     <script>
         // --- CONFIGURAÇÃO ---
-        const API_BASE = window.location.origin; // Assume que o front está na mesma URL do back
+        const API_BASE = "http://51.222.156.246:7001";
         let myID = "";
 
         function writeConsole(msg, status = "INFO") {
