--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
     </div>
 
     <script>
-        // API ATUALIZADA PARA LOCALHOST
+        // MANTENHA O IP DO SERVIDOR QUE ESTÁ RODANDO A API
+        // Se estiver acessando de fora, use o IP público. Se for local, use 127.0.0.1
         const API_BASE = "http://51.222.156.246:7001"; 
         let myID = localStorage.getItem('ilusion_id') || "";
 
